[CXF-7741]ensure we can build CXF with JDK11
Former-commit-id: a3295e61bcf8c00c13a79707841a58131fd9c97d