@@ -444,15 +444,9 @@ literal|true
 expr_stmt|;
 name|additionalJvmArgs
 operator|=
-literal|"--add-modules java.activation,java.xml.bind,java.xml.ws "
-operator|+
-literal|"--add-exports=java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED "
-operator|+
 literal|"--add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED "
 operator|+
 literal|"--add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED "
-operator|+
-literal|"--add-exports=java.xml.bind/com.sun.xml.internal.bind.marshaller=ALL-UNNAMED "
 operator|+
 literal|"--add-opens java.xml.ws/javax.xml.ws.wsaddressing=ALL-UNNAMED "
 operator|+
